--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<img src="https://i.imgur.com/tvugVXD.png" alt="cato" width="520" height="500">
 </body>
 </html>
