--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<meta http-equiv="refresh" content="0; url=http://codemasterlithuania.github.io/a1/" />
+<meta http-equiv="refresh" content="0; url=http://codemasterlithuania.github.io/a1/main.html" />
 </body>
 </html>
