--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#000000">
-
+<h1 style="color:red">places:</h1>
+<ol>
+<li style="color:red"><a href="tutorials.html">main programming functions</a></li>
+<li style="color:red">a</li>
+<li style="color:red">b</li>
+</ol>
 </body>
 </html>
