--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor="#000000">
-<h1 style="color:red">places:</h1>
-<ol>
-<li style="color:red","text-align:center"><a href="tutorials.html">main programming functions</a></li>
-<li style="color:red">a</li>
-<li style="color:red">b</li>
-</ol>
+	<h1>
+		<link href="inseksas.css" rel="stylesheet" type="text/css" />
+		<p>PLACES</p>
+	</h1>
+<body>
+<p><a href="tutorials.html">main programming functions</a></p>
+<p><a href="https://www.roblox.com/games/5874214071/rokeshi-alpha">rokeshi site</a></p>
+<p></p>
 </body>
 </html>
