--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html>
-	<h1>
-		<link href="inseksas.css" rel="stylesheet" type="text/css" />
-		<p>PLACES</p>
-	</h1>
-<body>
-<p><a href="tutorials.html">main programming functions</a></p>
-<p><a href="https://www.roblox.com/games/5874214071/rokeshi-alpha">rokeshi site</a></p>
-<p></p>
+<!doctype html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+	<body bgcolor="#DCDCDC">
+	<h2 class="virsutine-lentele">
+		<a class = "button" id = "about" href = "#aboutme">Programing</a>
+		<a class = "button" id = "contact" href = "#contactme">Contacts</a>
+	</h2>
+	<p id = "aboutme">Programing</p>
+	<p style= "margin: 5px">Anyone can learn how to program at a high level of proficiency. Programming involves using logic, mathematics and other skills that most people acquire through regular education. Students learn how to program through learning how to code apps in specific languages such as Python or C++. There are many ways to learn how to code apps- including online courses, books and videos. A coding academy offers a more hands-on approach by having you work directly with their staff on your chosen course of study.
+
+Programmers apply their skills daily in the non-tech field of medicine, science and military operations. The medical field uses programming in everything from medical devices to MRI scans and surgical protocols. In the scientific field, programmers help scientists create reliable software for both gaming and scientific applications. And in the military world, programmers help soldiers with both technical issues such as web browsers not working correctly and combat needs such as creating training programs for war situations.
+
+Learning how to program can be difficult or easy based on your choice of app development language or coding academy approach. However, anyone can learn how to code with the right approach at their disposal. This makes software development an essential part of modern life! </p>
+	<img src="index.jpg">
+	<p id = "contactme" style= "margin: 5px">Contacts</p>
+	<img src="index2.jpg">
+	<a href = "https://github.com/codepaceman">Github</a>
 </body>
 </html>
